# agent_rag_mariaagent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODEX.md  CONTEXT.md  Dockerfile  INSTALL.md  PRD.md  README.md  cli.py  docker-compose.yml  pyproject.toml  requirements.txt
.codex/agents/: harness-reviewer.md
.codex/plans/: mariaagent-chat-loading-humanized.md  mariaagent-demo-2026-07-17-minio-console.md  mariaagent-demo-data-2026-07-14.md  mariaagent-direct-sales-ranking.md  mariaagent-fix-empty-agent-answer.md  mariaagent-fix-qdrant-point-ids.md  mariaagent-fix-stock-question-empty-answer.md  mariaagent-fix-wheel-template-duplicate.md  mariaagent-front-retry-clean-request.md  mariaagent-minio-rules-rag.md  mariaagent-observability-qdrant-chatbot.md  mariaagent-professional-chat-ui.md  mariaagent-rules-bucket-viewer.md  mariaagent-stable-form-submit-demo.md
docker/postgres/init/: 01-create-databases.sql
docs/: parametros-env.md
observability/grafana/dashboards/: dashboards.yml
observability/grafana/dashboards/json/: maria_agent.json
observability/prometheus/: prometheus.yml
scripts/: bootstrap-vps-debian-ubuntu.sh
src/maria_rag_agent/: __init__.py  agent.py  api.py  cli.py  config.py  database.py  documents.py  evolution.py  guardrails.py  memory.py  migrations.py  observability.py  prompts.py  rules.py  runtime.py  tools.py  vectorstore.py  web.py
src/maria_rag_agent/templates/: chat.html  rules.html
