[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "maria-rag-agent"
version = "0.1.0"
description = "Base profissional de estudo para um agent RAG hibrido com SQLite, Chroma e LangChain."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "chromadb>=0.5.5",
  "langchain>=1.0.0",
  "langchain-chroma>=0.2.0",
  "langchain-huggingface>=0.1.0",
  "langchain-openai>=0.2.0",
  "langchain-text-splitters>=0.3.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "sentence-transformers>=3.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]
ollama = [
  "langchain-ollama>=0.2.0",
]

[project.scripts]
maria-rag = "maria_rag_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/maria_rag_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

