[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "maria-rag-agent"
version = "0.1.0"
description = "Base profissional de estudo para um agent RAG hibrido com PostgreSQL, Chroma, LangChain e Evolution Go."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "chromadb>=0.5.5",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "langchain>=1.0.0",
  "langchain-chroma>=0.2.0",
  "langchain-huggingface>=0.1.0",
  "langchain-openai>=0.2.0",
  "langchain-text-splitters>=0.3.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "psycopg[binary]>=3.2.1",
  "python-dotenv>=1.0.1",
  "sentence-transformers>=3.0.1",
  "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]
ollama = [
  "langchain-ollama>=0.2.0",
]

[project.scripts]
maria-rag = "maria_rag_agent.cli:main"
maria-rag-api = "maria_rag_agent.api:main"

[tool.hatch.build.targets.wheel]
packages = ["src/maria_rag_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"
